# BeerGame-se-03-team-24

./: CMakeLists.txt  README.md  references.json
doc/: CMakeLists.txt  Doxyfile.in
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  class_factory-members.html  class_factory.html  class_game-members.html  class_game.html  class_instructor-members.html  class_instructor.html  class_main_window-members.html  class_main_window.html  class_order-members.html  class_order.html  class_player-members.html  class_player.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  factory_8cpp.html  factory_8h.html  factory_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  game_8cpp.html  game_8h.html  game_8h_source.html  globals.html  globals_func.html  hierarchy.html  index.html  instructor_8cpp.html  instructor_8h.html  instructor_8h_source.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  md__home_kinky_tail_se-02-team-24__r_e_a_d_m_e.html  menudata.js  namespace_ui.html  (+8 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_4.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  (+2 more)
doc/latex/: _r_e_a_d_m_e_8md.tex  annotated.tex  class_factory.eps  class_factory.tex  class_game.tex  class_instructor.tex  class_main_window.tex  class_order.tex  class_player.eps  class_player.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  factory_8cpp.tex  factory_8h.tex  files.tex  game_8cpp.tex  game_8h.tex  hierarchy.tex  instructor_8cpp.tex  instructor_8h.tex  main_8cpp.tex  mainwindow_8cpp.tex  mainwindow_8h.tex  order_8cpp.tex  order_8h.tex  player_8cpp.tex  player_8h.tex  refman.tex
docs/: Doxyfile.in
resources/: resources.qrc
src/: BeerGame.pro  CMakeLists.txt  beergameserver.cpp  beergameserver.h  beergamewindow.cpp  factory.cpp  factory.h  game.cpp  game.h  game_ui.cpp  game_ui.h  gameserver.cpp  instructor.cpp  instructor.h  instructor_ui.cpp  instructor_ui.h  instructor_ui.ui  mainwindow.cpp  mainwindow.ui  order.cpp  order.h  player.cpp  player.cpp.autosave  player.h  player_ui.cpp  player_ui.h  player_ui.ui  playerevent.h  playerinterface.cpp  playerinterface.h  playerinterfaceO.h  playerinterfaceserver.cpp  sample.cpp  sample.h  shipment.cpp  shipment.h  src.pro
src/client/: clientinterface.cpp  clientinterface.h  playerclient.cpp  playerclient.h
src/server/: CMakeLists.txt  beergameserver  beergameserver.cpp  beergameserver.h  beergameserverwindow.cpp  beergameserverwindow.ui  playerinterfaceserver.cpp
test/: CMakeLists.txt  test.cpp  tests.cpp
